--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ authors = ["Your Name <you@example.com>"]
 python = "^3.8"
 bs4 = "^0.0.1"
 requests = "^2.28.2"
+fake-useragent = "^1.1.3"
 
 [tool.poetry.dev-dependencies]
 
